# max_clique

./: CMakeLists.txt
include/: maxclique.hpp
src/: maxclique.cpp
test/: test_speed_optimized.cpp
